Revision counter fixup
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@59 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/entities/pom.xml
+++ b/server/entities/pom.xml
@@ -34,6 +34,15 @@
 			<groupId>javax.annotation</groupId>
 			<artifactId>jsr250-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<classifier>jdk15</classifier>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
