Prepared web-services
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@68 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/store/build.properties
+++ b/client/store/build.properties
@@ -16,4 +16,5 @@ bin.includes = META-INF/,\
                target/dependency/commons-collections.jar,\
                plugin.xml,\
                schema/,\
-               target/dependency/jta.jar
+               target/dependency/jta.jar,\
+               target/dependency/jaxb-api.jar
