--- a/server/ejb/pom.xml
+++ b/server/ejb/pom.xml
@@ -37,6 +37,10 @@
 		
 		<!-- EJB 3.0 -->
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
 		</dependency>
