--- a/server/web/ws/pom.xml
+++ b/server/web/ws/pom.xml
@@ -22,6 +22,10 @@
 			<groupId>javax.jws</groupId>
 			<artifactId>jsr181-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
