--- a/client/store/.classpath
+++ b/client/store/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="target/dependency/jaxb-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/jta.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/commons-collections.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/persistence-api.jar"/>
