--- a/client/store/pom.xml
+++ b/client/store/pom.xml
@@ -25,6 +25,10 @@
 			<version>${pom.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.derby</groupId>
 			<artifactId>derby</artifactId>
 		</dependency>
@@ -56,7 +60,7 @@
 						</goals>
 						<configuration>
 							<stripVersion>true</stripVersion>
-							<includeGroupIds>commons-logging,commons-collections,org.apache.derby,javax.transaction,javax.persistence,org.hibernate,dom4j,cglib,asm,de.objectcode.time4u.server,org.testng</includeGroupIds>
+							<includeGroupIds>commons-logging,commons-collections,org.apache.derby,javax.transaction,javax.persistence,javax.xml.bind,org.hibernate,dom4j,cglib,asm,de.objectcode.time4u.server,org.testng</includeGroupIds>
 						</configuration>
 					</execution>
 				</executions>
