--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
 				<version>1.1</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.1</version>
+				<scope>provided</scope>
+			</dependency>
 			
 			<!-- EJB 3.0 -->
 			<dependency>
