--- a/server/entities/pom.xml
+++ b/server/entities/pom.xml
@@ -27,6 +27,10 @@
 			<artifactId>hibernate-annotations</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.ejb</groupId>
 			<artifactId>ejb-api</artifactId>
 		</dependency>
