Prepared connection-ui plugin
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@69 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/assemblies/client-mac/pom.xml
+++ b/assemblies/client-mac/pom.xml
@@ -25,6 +25,12 @@
 		</dependency>
 		<dependency>
 			<groupId>de.objectcode.time4u.client</groupId>
+			<artifactId>connection-ui</artifactId>
+			<version>${pom.version}</version>
+			<classifier>plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>de.objectcode.time4u.client</groupId>
 			<artifactId>ui</artifactId>
 			<version>${pom.version}</version>
 			<classifier>plugin</classifier>
