--- a/client/connection/build.properties
+++ b/client/connection/build.properties
@@ -1,4 +1,18 @@
-source.. = src/main/java/
+source.. = src/main/java/,\
+           src/main/resources/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               .
+               .,\
+               target/dependency/jsr181-api.jar,\
+               target/dependency/jaxws-api.jar,\
+               target/dependency/jaxws-rt.jar,\
+               target/dependency/jaxb-api.jar,\
+               target/dependency/jaxb-impl.jar,\
+               target/dependency/activation.jar,\
+               target/dependency/stax-ex.jar,\
+               target/dependency/sjsxp.jar,\
+               target/dependency/jsr173_api.jar,\
+               target/dependency/saaj-api.jar,\
+               target/dependency/saaj-impl.jar,\
+               target/dependency/streambuffer.jar,\
+               target/dependency/resolver.jar
