--- a/client/connection/pom.xml
+++ b/client/connection/pom.xml
@@ -12,6 +12,12 @@
 	<name>time4u-client-connection</name>
 	<dependencies>
 		<dependency>
+			<groupId>de.objectcode.time4u.client</groupId>
+			<artifactId>store</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.eclipse</groupId>
 			<artifactId>osgi</artifactId>
 		</dependency>
@@ -19,9 +25,84 @@
 			<groupId>org.eclipse.core</groupId>
 			<artifactId>runtime</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.jws</groupId>
+			<artifactId>jsr181-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+		</dependency>
+<dependency>
+<groupId>javax.activation</groupId>
+<artifactId>activation</artifactId>
+</dependency>
+<dependency>
+	<groupId>sun-jaxb</groupId>
+	<artifactId>jaxb-api</artifactId>
+	<version>2.1.4</version>
+</dependency>
+<dependency>
+	<groupId>sun-jaxb</groupId>
+	<artifactId>jaxb-impl</artifactId>
+	<version>2.1.4</version>
+</dependency>
+<dependency>
+	<groupId>sun-jaxws</groupId>
+	<artifactId>stax-ex</artifactId>
+</dependency>
+<dependency>
+	<groupId>sun-jaxws</groupId>
+	<artifactId>sjsxp</artifactId>
+</dependency>
+<dependency>
+	<groupId>sun-jaxws</groupId>
+	<artifactId>jsr173_api</artifactId>
+</dependency>
+<dependency>
+	<groupId>sun-jaxws</groupId>
+	<artifactId>saaj-api</artifactId>
+</dependency>
+<dependency>
+	<groupId>sun-jaxws</groupId>
+	<artifactId>streambuffer</artifactId>
+</dependency>
+<dependency>
+	<groupId>sun-jaxws</groupId>
+	<artifactId>saaj-impl</artifactId>
+</dependency>
+			<dependency>
+				<groupId>com.sun.org.apache.xml.internal</groupId>
+				<artifactId>resolver</artifactId></dependency>
+
+		<dependency>
+			<groupId>sun-jaxws</groupId>
+			<artifactId>jaxws-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>sun-jaxws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<stripVersion>true</stripVersion>
+							<includeGroupIds>javax.jws,javax.activation,sun-jaxws,sun-jaxb,com.sun.org.apache.xml.internal</includeGroupIds>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
