--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,72 @@
 				<artifactId>icu</artifactId>
 				<version>3.8.1</version>
 			</dependency>
-
+			<dependency>
+				<groupId>javax.activation</groupId>
+				<artifactId>activation</artifactId>
+				<version>1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxb</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxb</groupId>
+				<artifactId>jaxb-impl</artifactId>
+				<version>2.1.4</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>jaxws-api</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>jaxws-rt</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>stax-ex</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>sjsxp</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>jsr173_api</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>saaj-api</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>saaj-impl</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>streambuffer</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>sun-jaxws</groupId>
+				<artifactId>jsr181-api</artifactId>
+				<version>2.1.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.org.apache.xml.internal</groupId>
+				<artifactId>resolver</artifactId>
+				<version>20050927</version>
+			</dependency>
+			
 			<!-- Hibernate -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -235,6 +300,11 @@
 				<artifactId>jsr181-api</artifactId>
 				<version>1.0-MR1</version>
 				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.xml.ws</groupId>
+				<artifactId>jaxws-api</artifactId>
+				<version>2.0</version>
 			</dependency>
 			
 			<!-- Seam -->
