--- a/client/store/build.properties
+++ b/client/store/build.properties
@@ -17,4 +17,6 @@ bin.includes = META-INF/,\
                plugin.xml,\
                schema/,\
                target/dependency/jta.jar,\
-               target/dependency/jaxb-api.jar
+               target/dependency/jaxb-api.jar,\
+               target/dependency/jaxws-api.jar,\
+               target/dependency/jsr181-api.jar
