--- a/client/connection/pom.xml
+++ b/client/connection/pom.xml
@@ -16,7 +16,6 @@
 			<artifactId>store</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.eclipse</groupId>
 			<artifactId>osgi</artifactId>
@@ -26,62 +25,56 @@
 			<artifactId>runtime</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.jws</groupId>
-			<artifactId>jsr181-api</artifactId>
+			<groupId>javax.activation</groupId>
+			<artifactId>activation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
 		</dependency>
-<dependency>
-<groupId>javax.activation</groupId>
-<artifactId>activation</artifactId>
-</dependency>
-<dependency>
-	<groupId>sun-jaxb</groupId>
-	<artifactId>jaxb-api</artifactId>
-	<version>2.1.4</version>
-</dependency>
-<dependency>
-	<groupId>sun-jaxb</groupId>
-	<artifactId>jaxb-impl</artifactId>
-	<version>2.1.4</version>
-</dependency>
-<dependency>
-	<groupId>sun-jaxws</groupId>
-	<artifactId>stax-ex</artifactId>
-</dependency>
-<dependency>
-	<groupId>sun-jaxws</groupId>
-	<artifactId>sjsxp</artifactId>
-</dependency>
-<dependency>
-	<groupId>sun-jaxws</groupId>
-	<artifactId>jsr173_api</artifactId>
-</dependency>
-<dependency>
-	<groupId>sun-jaxws</groupId>
-	<artifactId>saaj-api</artifactId>
-</dependency>
-<dependency>
-	<groupId>sun-jaxws</groupId>
-	<artifactId>streambuffer</artifactId>
-</dependency>
-<dependency>
-	<groupId>sun-jaxws</groupId>
-	<artifactId>saaj-impl</artifactId>
-</dependency>
-			<dependency>
-				<groupId>com.sun.org.apache.xml.internal</groupId>
-				<artifactId>resolver</artifactId></dependency>
-
 		<dependency>
-			<groupId>sun-jaxws</groupId>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.ws</groupId>
 			<artifactId>jaxws-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>sun-jaxws</groupId>
+			<groupId>com.sun.xml.ws</groupId>
 			<artifactId>jaxws-rt</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.jvnet.staxex</groupId>
+			<artifactId>stax-ex</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.stream</groupId>
+			<artifactId>sjsxp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.stream</groupId>
+			<artifactId>stax-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.soap</groupId>
+			<artifactId>saaj-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.messaging.saaj</groupId>
+			<artifactId>saaj-impl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.xml.stream.buffer</groupId>
+			<artifactId>streambuffer</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.jws</groupId>
+			<artifactId>jsr181-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.org.apache.xml.internal</groupId>
+			<artifactId>resolver</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
@@ -98,7 +91,7 @@
 						</goals>
 						<configuration>
 							<stripVersion>true</stripVersion>
-							<includeGroupIds>javax.jws,javax.activation,sun-jaxws,sun-jaxb,com.sun.org.apache.xml.internal</includeGroupIds>
+							<includeGroupIds>javax.activation,javax.xml.soap,javax.xml.stream,org.jvnet.staxex,com.sun.org.apache.xml.internal,com.sun.xml.ws,com.sun.xml.stream,com.sun.xml.bind,com.sun.xml.stream.buffer,com.sun.xml.messaging.saaj</includeGroupIds>
 						</configuration>
 					</execution>
 				</executions>
