--- a/client/store/pom.xml
+++ b/client/store/pom.xml
@@ -25,8 +25,16 @@
 			<version>${pom.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.xml.ws</groupId>
+			<artifactId>jaxws-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.jws</groupId>
+			<artifactId>jsr181-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
@@ -60,7 +68,7 @@
 						</goals>
 						<configuration>
 							<stripVersion>true</stripVersion>
-							<includeGroupIds>commons-logging,commons-collections,org.apache.derby,javax.transaction,javax.persistence,javax.xml.bind,org.hibernate,dom4j,cglib,asm,de.objectcode.time4u.server,org.testng</includeGroupIds>
+							<includeGroupIds>javax.jws,commons-logging,commons-collections,org.apache.derby,javax.transaction,javax.persistence,javax.xml.bind,javax.xml.ws,org.hibernate,dom4j,cglib,asm,de.objectcode.time4u.server,org.testng</includeGroupIds>
 						</configuration>
 					</execution>
 				</executions>
