--- a/pom.xml
+++ b/pom.xml
@@ -184,65 +184,69 @@
 				<artifactId>icu</artifactId>
 				<version>3.8.1</version>
 			</dependency>
+			
+			<!-- jaxws / jaxb -->
 			<dependency>
 				<groupId>javax.activation</groupId>
 				<artifactId>activation</artifactId>
 				<version>1.1</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxb</groupId>
+				<groupId>javax.xml.bind</groupId>
 				<artifactId>jaxb-api</artifactId>
-				<version>2.1.4</version>
+				<version>2.1</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxb</groupId>
+				<groupId>com.sun.xml.bind</groupId>
 				<artifactId>jaxb-impl</artifactId>
+				<version>2.1.8</version>
+			</dependency>
+			<dependency>
+				<groupId>javax.xml.ws</groupId>
+				<artifactId>jaxws-api</artifactId>
+				<version>2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.xml.ws</groupId>
+				<artifactId>jaxws-rt</artifactId>
 				<version>2.1.4</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
-				<artifactId>jaxws-api</artifactId>
-				<version>2.1.1</version>
-			</dependency>
-			<dependency>
-				<groupId>sun-jaxws</groupId>
-				<artifactId>jaxws-rt</artifactId>
-				<version>2.1.1</version>
-			</dependency>
-			<dependency>
-				<groupId>sun-jaxws</groupId>
+				<groupId>org.jvnet.staxex</groupId>
 				<artifactId>stax-ex</artifactId>
-				<version>2.1.1</version>
+				<version>1.2</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
+				<groupId>com.sun.xml.stream</groupId>
 				<artifactId>sjsxp</artifactId>
-				<version>2.1.1</version>
+				<version>1.0.1</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
-				<artifactId>jsr173_api</artifactId>
-				<version>2.1.1</version>
+				<groupId>javax.xml.stream</groupId>
+				<artifactId>stax-api</artifactId>
+				<version>1.0</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
+				<groupId>javax.xml.soap</groupId>
 				<artifactId>saaj-api</artifactId>
-				<version>2.1.1</version>
+				<version>1.3</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
+				<groupId>com.sun.xml.messaging.saaj</groupId>
 				<artifactId>saaj-impl</artifactId>
-				<version>2.1.1</version>
+				<version>1.3</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
+				<groupId>com.sun.xml.stream.buffer</groupId>
 				<artifactId>streambuffer</artifactId>
-				<version>2.1.1</version>
+				<version>0.8</version>
 			</dependency>
 			<dependency>
-				<groupId>sun-jaxws</groupId>
+				<groupId>javax.jws</groupId>
 				<artifactId>jsr181-api</artifactId>
-				<version>2.1.1</version>
+				<version>1.0-MR1</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>com.sun.org.apache.xml.internal</groupId>
@@ -273,12 +277,6 @@
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
 				<version>1.1</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>2.1</version>
 				<scope>provided</scope>
 			</dependency>
 			
@@ -318,11 +316,6 @@
 				<artifactId>jsr181-api</artifactId>
 				<version>1.0-MR1</version>
 				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>javax.xml.ws</groupId>
-				<artifactId>jaxws-api</artifactId>
-				<version>2.0</version>
 			</dependency>
 			
 			<!-- Seam -->
