EJB revision generator
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@77 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/ejb/pom.xml
+++ b/server/ejb/pom.xml
@@ -41,6 +41,10 @@
 			<artifactId>jaxb-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.jws</groupId>
+			<artifactId>jsr181-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
 		</dependency>
