--- a/pom.xml
+++ b/pom.xml
@@ -318,6 +318,14 @@
 				<scope>provided</scope>
 			</dependency>
 			
+			<!-- Servlet -->
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>servlet-api</artifactId>
+				<version>2.5</version>
+				<scope>provided</scope>
+			</dependency>
+			
 			<!-- Seam -->
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
