--- a/client/connection/pom.xml
+++ b/client/connection/pom.xml
@@ -25,61 +25,21 @@
 			<artifactId>runtime</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>javax.activation</groupId>
-			<artifactId>activation</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.bind</groupId>
-			<artifactId>jaxb-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.xml.ws</groupId>
 			<artifactId>jaxws-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.sun.xml.ws</groupId>
-			<artifactId>jaxws-rt</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.jvnet.staxex</groupId>
-			<artifactId>stax-ex</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.stream</groupId>
-			<artifactId>sjsxp</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml.stream</groupId>
-			<artifactId>stax-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>javax.xml.soap</groupId>
-			<artifactId>saaj-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.messaging.saaj</groupId>
-			<artifactId>saaj-impl</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.xml.stream.buffer</groupId>
-			<artifactId>streambuffer</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>javax.jws</groupId>
 			<artifactId>jsr181-api</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.org.apache.xml.internal</groupId>
-			<artifactId>resolver</artifactId>
 		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
-			<plugin>
+			<!--  plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
@@ -91,11 +51,11 @@
 						</goals>
 						<configuration>
 							<stripVersion>true</stripVersion>
-							<includeGroupIds>javax.activation,javax.xml.soap,javax.xml.stream,org.jvnet.staxex,com.sun.org.apache.xml.internal,com.sun.xml.ws,com.sun.xml.stream,com.sun.xml.bind,com.sun.xml.stream.buffer,com.sun.xml.messaging.saaj</includeGroupIds>
+							<includeGroupIds>javax.xml.soap,javax.xml.ws,javax.xml.stream,org.jvnet.staxex,com.sun.org.apache.xml.internal,com.sun.xml.ws,com.sun.xml.stream,com.sun.xml.stream.buffer,com.sun.xml.messaging.saaj</includeGroupIds>
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin -->
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
