--- a/client/store/.classpath
+++ b/client/store/.classpath
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="target/dependency/jsr181-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/streambuffer.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/stax-ex.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/stax-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/sjsxp.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/saaj-impl.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/saaj-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/resolver.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/jaxws-rt.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/jaxws-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/activation.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/jaxb-impl.jar"/>
+	<classpathentry exported="true" kind="lib" path="target/dependency/jsr181-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/jaxb-api.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/jta.jar"/>
 	<classpathentry exported="true" kind="lib" path="target/dependency/commons-collections.jar"/>
