--- a/client/store/build.properties
+++ b/client/store/build.properties
@@ -18,5 +18,15 @@ bin.includes = META-INF/,\
                schema/,\
                target/dependency/jta.jar,\
                target/dependency/jaxb-api.jar,\
+               target/dependency/jsr181-api.jar,\
+               target/dependency/jaxb-impl.jar,\
+               target/dependency/activation.jar,\
                target/dependency/jaxws-api.jar,\
-               target/dependency/jsr181-api.jar
+               target/dependency/jaxws-rt.jar,\
+               target/dependency/resolver.jar,\
+               target/dependency/saaj-api.jar,\
+               target/dependency/saaj-impl.jar,\
+               target/dependency/sjsxp.jar,\
+               target/dependency/stax-api.jar,\
+               target/dependency/stax-ex.jar,\
+               target/dependency/streambuffer.jar
