--- a/server/web/ws/pom.xml
+++ b/server/web/ws/pom.xml
@@ -29,6 +29,10 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
