--- a/client/connection-ui/pom.xml
+++ b/client/connection-ui/pom.xml
@@ -40,6 +40,11 @@
 			<artifactId>time4u-server-api</artifactId>
 			<version>${pom.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>de.objectcode.time4u.client</groupId>
+			<artifactId>connection</artifactId>
+			<version>${pom.version}</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
