Prepared synchronization status
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@81 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ws/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/ws/src/main/webapp/WEB-INF/web.xml
@@ -23,17 +23,16 @@
 		<servlet-name>PingServiceWS</servlet-name>
 		<url-pattern>/PingService</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>PingServiceWS</servlet-name>
+		<url-pattern>/secure/PingService</url-pattern>
+	</servlet-mapping>
 
 	<servlet-mapping>
 		<servlet-name>LoginServiceWS</servlet-name>
 		<url-pattern>/LoginService</url-pattern>
 	</servlet-mapping>
 	
-	<servlet-mapping>
-		<servlet-name>PersonServiceWS</servlet-name>
-		<url-pattern>/PersonService</url-pattern>
-	</servlet-mapping>
-
 	<servlet-mapping>
 		<servlet-name>PersonServiceWS</servlet-name>
 		<url-pattern>/secure/PersonService</url-pattern>
