--- a/server/web/ws/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/ws/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,10 @@
 		<servlet-name>ProjectServiceWS</servlet-name>
 		<servlet-class>de.objectcode.time4u.server.web.ws.ProjectServiceWS</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>RevisionServiceWS</servlet-name>
+		<servlet-class>de.objectcode.time4u.server.web.ws.RevisionServiceWS</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>PingServiceWS</servlet-name>
@@ -41,6 +45,11 @@
 	<servlet-mapping>
 		<servlet-name>ProjectServiceWS</servlet-name>
 		<url-pattern>/secure/ProjectService</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>RevisionServiceWS</servlet-name>
+		<url-pattern>/secure/RevisionService</url-pattern>
 	</servlet-mapping>
 	
 	<security-constraint>
