Now there is a button, but still dont dare to press it
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@84 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/connection-ui/plugin.properties
+++ b/client/connection-ui/plugin.properties
@@ -2,3 +2,6 @@ menu.server.label = &Server
 
 action.connection.new.label = New server connection
 action.connection.new.tooltip = New server connection
+
+action.connection.manage.label = Manage server connections
+action.connection.manage.tooltip = Manage server connections
