--- a/client/connection-ui/plugin.xml
+++ b/client/connection-ui/plugin.xml
@@ -12,6 +12,12 @@
                label="%menu.server.label"
                path="connectionAdditions">
             <groupMarker
+                  name="newServerGroup">
+            </groupMarker>
+            <separator
+                  name="time4u-client-connection-ui.separator1">
+            </separator>
+            <groupMarker
                   name="serverGroup">
             </groupMarker>
          </menu>
@@ -19,9 +25,17 @@
                class="de.objectcode.time4u.client.connection.ui.actions.ConnectionActionDelegate"
                id="de.objectcode.time4u.client.connection.new"
                label="%action.connection.new.label"
-               menubarPath="serverMenu/serverGroup"
+               menubarPath="serverMenu/newServerGroup"
                style="push"
                tooltip="%action.connection.new.tooltip">
+         </action>
+         <action
+               class="de.objectcode.time4u.client.connection.ui.actions.ConnectionActionDelegate"
+               id="de.objectcode.time4u.client.connection.manage"
+               label="%action.connection.manage.label"
+               menubarPath="serverMenu/serverGroup"
+               style="push"
+               tooltip="%action.connection.manage.tooltip">
          </action>
       </actionSet>
    </extension>
