--- a/client/ui/plugin.properties
+++ b/client/ui/plugin.properties
@@ -142,3 +142,7 @@ synchronize.lastRun.format = yyyy-MM-dd HH:mm:ss
 synchronize.lastLog.show = Show last log
 synchronize.synchronize.now = Synchronize now
 
+perspecitve.full.label = Full
+perspective.full.tooltip = Full perspective
+perspective.compact.label = Compact
+perspective.compact.tooltip = Compact perspective
