Prepared workitem synchronize
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@88 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ws/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/ws/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,10 @@
 		<servlet-name>TaskServiceWS</servlet-name>
 		<servlet-class>de.objectcode.time4u.server.web.ws.TaskServiceWS</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>WorkItemServiceWS</servlet-name>
+		<servlet-class>de.objectcode.time4u.server.web.ws.WorkItemServiceWS</servlet-class>
+	</servlet>
 
 	<servlet-mapping>
 		<servlet-name>PingServiceWS</servlet-name>
@@ -59,6 +63,11 @@
 	<servlet-mapping>
 		<servlet-name>TaskServiceWS</servlet-name>
 		<url-pattern>/secure/TaskService</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>WorkItemServiceWS</servlet-name>
+		<url-pattern>/secure/WorkItemService</url-pattern>
 	</servlet-mapping>
 	
 	<security-constraint>
