Separated user accounts from persons
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@89 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/jaas/pom.xml
+++ b/server/jaas/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.objectcode.time4u.server</groupId>
-			<artifactId>time4u-server-api</artifactId>
+			<artifactId>time4u-server-entities</artifactId>
 			<version>${pom.version}</version>
 			<scope>provided</scope>
 		</dependency>
