--- a/client/connection-ui/pom.xml
+++ b/client/connection-ui/pom.xml
@@ -84,5 +84,20 @@
 				</dependency>
 			</dependencies>
 		</profile>
+		<profile>
+			<id>win32</id>
+			<activation>
+				<os>
+					<family>Windows</family>
+					<arch>x86</arch>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt.win32.win32</groupId>
+					<artifactId>x86</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
 	</profiles>
 </project>
