--- a/assemblies/server-deploy/pom.xml
+++ b/assemblies/server-deploy/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
 		<groupId>de.objectcode.time4u.assemblies</groupId>
-		<artifactId>base</artifactId>
+		<artifactId>assemblies</artifactId>
 		<version>0.9.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
