--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.objectcode.time4u</groupId>
-	<artifactId>base</artifactId>
+	<artifactId>time4u</artifactId>
 	<version>0.9.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>time4u</name>
@@ -16,6 +16,32 @@
 		<developerConnection>scm:svn:https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk</developerConnection>
 		<url>http://sourceforge.net/projects/time4u</url>
 	</scm>
+	<distributionManagement>
+		<site>
+			<url>file:///Users/junglas/workspaces/w3/time4u-site</url>
+		</site>
+	</distributionManagement>
+	<url>http://time4u.sourceforge.net</url>
+	<description>Time-Tracking tool with client-server synchronization.</description>
+	<licenses>
+		<license>
+			<name>MIT license</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+	<issueManagement>
+		<url>http://sourceforge.net/tracker/?group_id=239870</url>
+	</issueManagement>
+	<developers>
+		<developer>
+			<id>junglas</id>
+			<name>Bodo Junglas</name>
+		</developer>
+		<developer>
+			<id>xylander</id>
+			<name>York Xylander</name>
+		</developer>
+	</developers>
 	<repositories>
 		<repository>
 			<id>repository.jboss.org</id>
@@ -189,7 +215,7 @@
 				<artifactId>icu</artifactId>
 				<version>3.8.1</version>
 			</dependency>
-			
+
 			<!-- jaxws / jaxb -->
 			<dependency>
 				<groupId>javax.activation</groupId>
@@ -258,7 +284,7 @@
 				<artifactId>resolver</artifactId>
 				<version>20050927</version>
 			</dependency>
-			
+
 			<!-- Hibernate -->
 			<dependency>
 				<groupId>org.hibernate</groupId>
@@ -275,7 +301,7 @@
 				<artifactId>c3p0</artifactId>
 				<version>0.9.1</version>
 			</dependency>
-			
+
 			<!-- Server -->
 			<!-- Commons -->
 			<dependency>
@@ -284,7 +310,7 @@
 				<version>1.1</version>
 				<scope>provided</scope>
 			</dependency>
-			
+
 			<!-- EJB 3.0 -->
 			<dependency>
 				<groupId>javax.persistence</groupId>
@@ -322,7 +348,7 @@
 				<version>1.0-MR1</version>
 				<scope>provided</scope>
 			</dependency>
-			
+
 			<!-- Servlet -->
 			<dependency>
 				<groupId>javax.servlet</groupId>
@@ -330,7 +356,7 @@
 				<version>2.5</version>
 				<scope>provided</scope>
 			</dependency>
-			
+
 			<!-- Seam -->
 			<dependency>
 				<groupId>org.jboss.seam</groupId>
@@ -391,7 +417,7 @@
 				<artifactId>derby</artifactId>
 				<version>10.4.2.0</version>
 			</dependency>
-			
+
 			<!-- Unit Testing -->
 			<dependency>
 				<groupId>org.testng</groupId>
@@ -402,4 +428,23 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+				<reportSets>
+					<reportSet>
+						<reports>
+							<report>summary</report>
+							<report>project-team</report>
+							<report>scm</report>
+							<report>issue-tracking</report>
+							<report>license</report>
+						</reports>
+					</reportSet>
+				</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
