Prepared statistic repository
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@99 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/server/web/ws/pom.xml
+++ b/server/web/ws/pom.xml
@@ -33,6 +33,10 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jmdns</groupId>
+			<artifactId>jmdns</artifactId>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
