--- a/pom.xml
+++ b/pom.xml
@@ -313,6 +313,11 @@
 				<version>1.1</version>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>jmdns</groupId>
+				<artifactId>jmdns</artifactId>
+				<version>1.0</version>
+			</dependency>
 
 			<!-- EJB 3.0 -->
 			<dependency>
