--- a/server/web/ws/src/main/webapp/WEB-INF/web.xml
+++ b/server/web/ws/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,11 @@
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
 	version="2.4">
+
+	<listener>
+		<listener-class>de.objectcode.time4u.server.web.ws.WSContextListener</listener-class>
+	</listener>
+
 	<servlet>
 		<servlet-name>PingServiceWS</servlet-name>
 		<servlet-class>de.objectcode.time4u.server.web.ws.PingServiceWS</servlet-class>
