Prepared preference pages
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@103 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/ui/plugin.xml
+++ b/client/ui/plugin.xml
@@ -529,4 +529,30 @@
          </action>
       </actionSet>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="de.objectcode.time4u.client.ui.preferences.UIPreferencesPage"
+            id="de.objectcode.time4u.client.ui.preferences.UIPreferencesPage"
+            name="%propertyPage.userInterface.title">
+      </page>
+      <page
+            category="de.objectcode.time4u.client.ui.preferences.UIPreferencesPage"
+            class="de.objectcode.time4u.client.ui.preferences.PunchViewPreferencesPage"
+            id="time4u-client-ui.page1"
+            name="%punchView.title">
+      </page>
+      <page
+            category="de.objectcode.time4u.client.ui.preferences.UIPreferencesPage"
+            class="de.objectcode.time4u.client.ui.preferences.CalendarViewPreferencesPage"
+            id="de.objectcode.time4u.client.ui.preferences.CalendarViewPreferencesPage"
+            name="%calendarView.title">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.equinox.preferences.preferences">
+      <initializer
+            class="de.objectcode.time4u.client.ui.preferences.PreferenceInitializer">
+      </initializer>
+   </extension>
 </plugin>
