Prepared synchronize view
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@104 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/connection-ui/plugin.properties
+++ b/client/connection-ui/plugin.properties
@@ -5,3 +5,16 @@ action.connection.new.tooltip = New server connection
 
 action.connection.manage.label = Manage server connections
 action.connection.manage.tooltip = Manage server connections
+
+action.synchronize.openView = Open Synchronization View
+action.synchronize.now = Synchronize Now
+
+synchronizeView.label = Synchronization
+synchronizeView.status.label = Status
+synchronizeView.status.active.waiting = Active (Waiting)
+synchronizeView.status.active.running = Active (Running)
+synchronizeView.status.inactive = Inactive
+synchronizeView.lastRun.label = Last run
+synchronizeView.lastRun.format = yyyy-MM-dd HH:mm:ss
+synchronizeView.lastLog.show = Show last log
+synchronizeView.synchronize.now = Synchronize now
