--- a/client/connection-ui/plugin.xml
+++ b/client/connection-ui/plugin.xml
@@ -20,6 +20,12 @@
             <groupMarker
                   name="serverGroup">
             </groupMarker>
+            <separator
+                  name="time4u-client-connection-ui.separator2">
+            </separator>
+            <groupMarker
+                  name="viewGroup">
+            </groupMarker>
          </menu>
          <action
                class="de.objectcode.time4u.client.connection.ui.actions.ConnectionActionDelegate"
@@ -37,7 +43,24 @@
                style="push"
                tooltip="%action.connection.manage.tooltip">
          </action>
+         <action
+               class="de.objectcode.time4u.client.connection.ui.actions.ConnectionActionDelegate"
+               id="de.objectcode.time4u.client.connection.openView"
+               label="%action.synchronize.openView"
+               menubarPath="serverMenu/viewGroup"
+               style="push">
+         </action>
       </actionSet>
+   </extension>
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            class="de.objectcode.time4u.client.connection.ui.views.SynchronizeView"
+            icon="icons/Synchronize.gif"
+            id="de.objectcode.time4u.client.connection.ui.syncrhonizeView"
+            name="%synchronizeView.label"
+            restorable="true">
+      </view>
    </extension>
 
 </plugin>
