--- a/client/ui/pom.xml
+++ b/client/ui/pom.xml
@@ -94,5 +94,20 @@
 				</dependency>
 			</dependencies>
 		</profile>
+		<profile>
+			<id>linux-x86_64</id>
+			<activation>
+				<os>
+					<name>linux</name>
+					<arch>amd64</arch>
+				</os>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.eclipse.swt.gtk.linux</groupId>
+					<artifactId>x86_64</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
 	</profiles>
 </project>
