--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,11 @@
 				<artifactId>x86</artifactId>
 				<version>3.4.1</version>
 			</dependency>
+				<dependency>
+					<groupId>org.eclipse.swt.gtk.linux</groupId>
+					<artifactId>x86_64</artifactId>
+					<version>3.4.1</version>
+				</dependency>
 			<dependency>
 				<groupId>org.eclipse.update</groupId>
 				<artifactId>configurator</artifactId>
