--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -15,5 +15,6 @@
   	<module>server-deploy</module>
   	<module>client-mac</module>
   	<module>client-win32</module>
+  	<module>client-linux-x86_64</module>
   </modules>
 </project>
