Synchronization background job
git-svn-id: https://time4u.svn.sourceforge.net/svnroot/time4u/overhaul/trunk@107 d1e209a9-466a-4101-bc37-f2a0db2545eb

--- a/client/connection-ui/plugin.properties
+++ b/client/connection-ui/plugin.properties
@@ -11,9 +11,10 @@ action.synchronize.now = Synchronize Now
 
 synchronizeView.label = Synchronization
 synchronizeView.status.label = Status
-synchronizeView.status.active.waiting = Active (Waiting)
-synchronizeView.status.active.running = Active (Running)
-synchronizeView.status.inactive = Inactive
+synchronizeView.status.none = Inactive
+synchronizeView.status.scheduled = Scheduled
+synchronizeView.status.ok = Ok
+synchronizeView.status.failure = Failure
 synchronizeView.lastRun.label = Last run
 synchronizeView.lastRun.format = yyyy-MM-dd HH:mm:ss
 synchronizeView.lastLog.show = Show last log
